--- a/static/css/components/media_text.scss
+++ b/static/css/components/media_text.scss
@@ -3,7 +3,7 @@
     padding: calc(#{var.$spacing} * 12) 0;
     display: grid;
     grid-template-columns: 6fr 4fr;
-    gap: calc(#{var.$spacing} * 6);
+    gap: 0 calc(#{var.$spacing} * 6);
   }
   .header {
     grid-column: 1 / span 2;
